--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,17 +1,26 @@
-* {
-	box-sizing:border-box;
+  *, *:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+body {
+    width: 6.25in;
+    height: 4.5in;
+    margin: 0;
+    padding: 0;
+	border:solid 2px black;
 }
-
 header {
 	background:#a21221;
+	height:.75in;
 }
 
 h1 {
 	color:white;
 	font-family:sans-serif;
 	float:left;
-	font-size:24pt;
-	line-height:20pt;
+	font-size:20pt;
+	line-height:18pt;
 	margin-left:20px;
 }
 
@@ -20,48 +29,60 @@ h2 {
 	font-family:sans-serif;
 	float:right;
 	margin-right:20px;
-	font-size:20pt;
+	font-size:16pt;
 }
 
 #house {
+	margin-top:-10px;
 	width:100%;
 }
 
-#greyribbon {
+#frontbottom {
 	flex-direction:ltr;
 	width:100%;
 }
 
-#greyribbon ul {
+ul {
 	display:flex;
 	margin:auto;
 	list-style:none;
-	background:#f5f5f5;
 }
 
 h3 {
+	margin-left:-10px;
 	font-family:sans-serif;
 	width:100%;
-	font-size:18pt;
+	font-size:14pt;
 	white-space:nowrap;
 }
 
 #kwlogo {
-	max-width:60%;
+	margin-right:25px;
+	max-width:50%;
 	float:right;
 }
 
-p {
-	font-family:sans-serif;
-	width:80%;
-	margin:auto;
-}
-p span {
-	font-weight:600;
-	font-size:14pt;
+#type {
+	margin:.25in;
 }
 
-a {
+p {
+	text-indent:20px;
+	font-family:sans-serif;
+	width:100%;
+	margin:auto;
+	margin-bottom:10px;
+	font-size:10pt;
+	text-align:justify;
+	justify-content:center;
+}
+
+h4 {
+	font-family:sans-serif;
+	font-size:10pt;
+	margin-left:4in;
+}
+span {
 	text-decoration:none;
 	color:darkred;
 	font-weight:600;
@@ -70,16 +91,11 @@ a {
 #businesscard {
 	width:50%;
 	margin:auto;
+	margin-top:-.48in;
 }
 
-div {
+#script {
 	background:#e06663;
 	width:50%;
 	float:right;
-}
-
-@media (max-width:840px) {
-	{
-
-	}
 }
